# paysmart

./: .env  .firebaserc  .gitignore  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  deletelockfiles.ps1  firebase.json  gradle.properties  gradlew  gradlew.bat  index.html  settings.gradle.kts  version.properties
.codex-config/configstore/: update-notifier-firebase-tools.json
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  main.yml  publish-codedocs.yml
android/setup/: setup_git_hooks.py
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/docs/: admin_panel_roadmap.md  architecture_pitch.md  feature_account_lint_build_scan_release_fix.md  finish_account_ui_navigation_data_bindings.md  finish_feature_account_sequential_guide.md  gradle_modularization_phase1_revised_move_list.md  gradle_modularization_strategy.md  native_jni_pipeline.md  (+12 more)
app/src/main/cpp/: CMakeLists.txt  Doxyfile  Invoke-GenerateNativeDocs.ps1  build-openssl.sh  native-lib.cpp  room-lib.cpp
app/src/main/cpp/crypto/: internal_utils.h  password_hasher.cpp  password_hasher.h  pbkdf2.cpp  pbkdf2.h
app/src/main/cpp/room/: aes_encryptor.cpp  aes_encryptor.h  internal_util.h  pbkdf2.cpp  pbkdf2.h
app/src/main/cpp/util/: shared_utils.h
functions/: .gitignore  New-GeneratePassKeyHash.ps1  New-WebhookSecretHash.ps1  generate_paysmart_store_assets.py  package-lock.json  package.json  tsconfig.dev.json  tsconfig.json
gradle/: libs.versions.toml
html/: NativeBridge_8kt.html  NativeBridge_8kt_source.html  NativePasswordBridge_8kt.html  NativePasswordBridge_8kt_source.html  RoomNativeBridge_8kt.html  RoomNativeBridge_8kt_source.html  _native_password_bridge_8kt.html  _room_native_bridge_8kt.html  _room_native_bridge_8kt_source.html  aes__encryptor_8cpp.html  aes__encryptor_8cpp.js  aes__encryptor_8cpp__incl.dot  aes__encryptor_8cpp_source.html  aes__encryptor_8h.html  aes__encryptor_8h.js  aes__encryptor_8h__dep__incl.dot  aes__encryptor_8h__incl.dot  aes__encryptor_8h_source.html  crypto_2pbkdf2_8cpp.html  crypto_2pbkdf2_8cpp.js  crypto_2pbkdf2_8cpp__incl.dot  crypto_2pbkdf2_8cpp_source.html  crypto_2pbkdf2_8h.html  crypto_2pbkdf2_8h.js  crypto_2pbkdf2_8h__dep__incl.dot  crypto_2pbkdf2_8h__incl.dot  crypto_2pbkdf2_8h_source.html  dir_000001_000002.html  dir_000001_000011.html  dir_29a654fef9ee522348956763c377cb52.html  dir_29a654fef9ee522348956763c377cb52_dep.dot  dir_3beed5c8ef85f5bbdc13109f245a884a.html  dir_3beed5c8ef85f5bbdc13109f245a884a.js  dir_3beed5c8ef85f5bbdc13109f245a884a_dep.dot  dir_465e77a67962a7a60f6a0b9e2d9e9e71.html  dir_465e77a67962a7a60f6a0b9e2d9e9e71_dep.dot  dir_483f849d15a04f5e7252cddf1ba66917.html  dir_483f849d15a04f5e7252cddf1ba66917_dep.dot  dir_51bdcf2b6cf6f35b28406800a76c11cb.html  dir_51bdcf2b6cf6f35b28406800a76c11cb.js  (+69 more)
paysmart_go/: .env  Dockerfile  compose.yaml  env.yaml  go.mod  go.sum  http.go
sandbox/: README.md  build.gradle.kts
(+2661 files in other folders)
